// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBarButtons renders correctly for language {
  name: 'Українська',
  code: 'uk',
  path: '/uk',
  dateFormat: 'DD.MM.YYYY'
} when isDarkColorTheme false and isLanguageSelectionActive false 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language "
        title="Change language"
      >
        Українська
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__light"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language {
  name: 'Українська',
  code: 'uk',
  path: '/uk',
  dateFormat: 'DD.MM.YYYY'
} when isDarkColorTheme false and isLanguageSelectionActive true 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language active"
        title="Change language"
      >
        Українська
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__light"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language {
  name: 'Українська',
  code: 'uk',
  path: '/uk',
  dateFormat: 'DD.MM.YYYY'
} when isDarkColorTheme true and isLanguageSelectionActive false 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language "
        title="Change language"
      >
        Українська
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__dark"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language {
  name: 'Українська',
  code: 'uk',
  path: '/uk',
  dateFormat: 'DD.MM.YYYY'
} when isDarkColorTheme true and isLanguageSelectionActive true 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language active"
        title="Change language"
      >
        Українська
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__dark"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'English', code: 'en', path: '', dateFormat: 'DD/MM/YYYY' } when isDarkColorTheme false and isLanguageSelectionActive false 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language "
        title="Change language"
      >
        English
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__light"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'English', code: 'en', path: '', dateFormat: 'DD/MM/YYYY' } when isDarkColorTheme false and isLanguageSelectionActive true 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language active"
        title="Change language"
      >
        English
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__light"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'English', code: 'en', path: '', dateFormat: 'DD/MM/YYYY' } when isDarkColorTheme true and isLanguageSelectionActive false 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language "
        title="Change language"
      >
        English
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__dark"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'English', code: 'en', path: '', dateFormat: 'DD/MM/YYYY' } when isDarkColorTheme true and isLanguageSelectionActive true 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language active"
        title="Change language"
      >
        English
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__dark"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'Русский', code: 'ru', path: '/ru', dateFormat: 'DD.MM.YYYY' } when isDarkColorTheme false and isLanguageSelectionActive false 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language "
        title="Change language"
      >
        Русский
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__light"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'Русский', code: 'ru', path: '/ru', dateFormat: 'DD.MM.YYYY' } when isDarkColorTheme false and isLanguageSelectionActive true 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language active"
        title="Change language"
      >
        Русский
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__light"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'Русский', code: 'ru', path: '/ru', dateFormat: 'DD.MM.YYYY' } when isDarkColorTheme true and isLanguageSelectionActive false 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language "
        title="Change language"
      >
        Русский
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__dark"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`NavigationBarButtons renders correctly for language { name: 'Русский', code: 'ru', path: '/ru', dateFormat: 'DD.MM.YYYY' } when isDarkColorTheme true and isLanguageSelectionActive true 1`] = `
<div>
  <ul
    class="navigationBarButtons"
  >
    <li
      class="navigationBarButtons__button"
    >
      <button
        class="navigationBarButtons__language active"
        title="Change language"
      >
        Русский
      </button>
    </li>
    <li
      class="navigationBarButtons__button"
    >
      <button
        aria-label="Change website color theme"
        title="Switch color theme"
      >
        <span
          class="navigationBarButtons__theme navigationBarButtons__theme__dark"
          role="img"
        />
      </button>
    </li>
  </ul>
</div>
`;
